[package]
name = "wasm-steganography"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.24", default-features = false, features = ["png"] }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlInputElement",
  "HtmlImageElement",
  "FileList",
  "File",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "Window",
  "Document",
  "Event",
  "EventTarget"
]
